welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:8: error: not found: value k
		setPos (i,k)
                          ^