welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	var h:Int = getMondeHauteur()
	var l:Int = getMondeLargeur()
	var c:Int = 0
	for (i<- 1 to h) {
		for (j <- 1 to h) {
		ecritMessage(c)
		setPos (i,k)
		c = c+1}
		ecritMessage(c)
	}
}
